# velr-rust-driver

./: Cargo.toml  LICENSE  README.md  build.rs
prebuilt/windows-x86_64/: velrc.lib
runtime/linux-aarch64/: Cargo.toml
runtime/linux-aarch64/src/: lib.rs
runtime/linux-x86_64/: Cargo.toml
runtime/linux-x86_64/src/: lib.rs
runtime/macos-universal/: Cargo.toml
runtime/macos-universal/src/: lib.rs
runtime/windows-x86_64/: Cargo.toml  LICENSE.runtime
runtime/windows-x86_64/src/: lib.rs
scripts/: smoke_publish.sh
src/: api.rs  lib.rs  runtime.rs  sys.rs
tests/: driver.rs  readme_coverage.rs  readme_examples_exact.rs  site_examples_exact.rs
