[package]
name = "velr"
version = "0.1.0"
edition = "2021"

# No build script / native linking needed with libloading
# links = "velr"
# build = "build.rs"

include = ["src/**", "prebuilt/**", "Cargo.toml", "LICENSE*", "README.md"]

[dependencies]
libloading = "0.8"
blake3 = "1"

arrow2 = { version = "0.18", optional = true, default-features = false }

[dev-dependencies]
serde_json = "1"

[features]
default = []
arrow-ipc = ["dep:arrow2"]

