[package]
name = "velr"
version = "0.1.44"
edition = "2021"

description = "Velr embedded property-graph database (Rust driver, beta)"
license-file = "LICENSE"
readme = "README.md"
homepage = "https://velr.ai"
repository = "https://github.com/velr-ai/velr-rust-driver"
documentation = "https://docs.rs/velr"
keywords = ["database", "embedded", "sqlite", "graph"]
categories = ["database"]

include = ["src/**", "prebuilt/**", "Cargo.toml", "LICENSE*", "README.md"]

[dependencies]
libloading = "0.8"
blake3 = "1"

arrow2 = { version = "0.18", optional = true, default-features = false }

[dev-dependencies]
serde_json = "1"

[features]
default = []
arrow-ipc = ["dep:arrow2"]

