[package]
name = "velr-runtime-windows-x86_64"
version = "0.2.16"
edition = "2021"

description = "Velr native runtime for Windows x86_64 MSVC"
license-file = "LICENSE.runtime"
homepage = "https://velr.ai"
repository = "https://github.com/velr-ai/velr-rust-driver"
documentation = "https://docs.rs/velr"

include = ["src/**", "prebuilt/**", "Cargo.toml", "LICENSE.runtime"]

[lib]
name = "velr_runtime_windows_x86_64"
path = "src/lib.rs"
